[package]
name = "jito-points"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-lang = { version = "0.28.0" }
anchor-spl = { version = "0.28.0" }
anchor-syn = { version = "0.28.0", features = ["hash"] }
anchor-client = { version = "0.28.0", features = ["async"] }
solana-sdk = { version = "1.16" }
solana-client = { version = "1.16" }
solana-account-decoder = { version = "1.16" }
tokio = "1"
log = "0.4"
clap = "3.2"
anyhow = "1.0"
toml = "0.5"
serde = "1"
simple_logger = "2.3.0"
bytemuck = { version = "1.7", features = ["derive"] }

# Used to not re-implement some CLP math
whirlpool = { git = "https://github.com/orca-so/whirlpools", rev = "f54632f" }